examples/tao/errors/syntax_errors/missing_paren.tao
// Missing closing parenthesis
// Expected error: Parse error - expected ')', got something else

let x = (10 + 5

x
